RESOLVED FIXED67743
AX: some popup buttons not announced by VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=67743
Summary AX: some popup buttons not announced by VoiceOver
chris fleizach
Reported 2011-09-07 15:35:07 PDT
* STEPS TO REPRODUCE 1. http://public.yahoo.com/kloots/menu-button-test.html * RESULTS First two buttons behave as expected: "Options popup button" Second two buttons do not: "Options button" Expected "Options popup button" WebKit is exposing the first set as: AXRole: AXPopupButton AXHasPopup: YES WebKit is exposing the second set as: AXRole: AXButton AXHasPopup: YES
Attachments
patch (7.04 KB, patch)
2011-09-07 15:42 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-09-07 15:35:15 PDT
chris fleizach
Comment 2 2011-09-07 15:42:00 PDT
Created attachment 106661 [details] patch In the patch, I remove this block if (node && node->hasTagName(buttonTag)) because it's duplicated only a few lines above that. This is removed - if (cssBox && cssBox->isRenderButton()) - return toRenderButton(m_renderer)->text(); because it causes the text to be duplicated as the title.
chris fleizach
Comment 3 2011-10-26 15:24:09 PDT
Comment on attachment 106661 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=106661&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1157 > if (isWebArea()) { This is where the AXValue of a button can be duplicated in the AXTitle if there's a value attribute used in the button
Darin Adler
Comment 4 2011-10-31 17:11:41 PDT
Comment on attachment 106661 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=106661&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:3107 > + return (ariaHasPopup()) ? PopUpButtonRole : ButtonRole; Extra parentheses here that are not needed.
chris fleizach
Comment 5 2011-11-01 08:19:36 PDT
Note You need to log in before you can comment on or make changes to this bug.