AX: some popup buttons not announced by VoiceOver https://bugs.webkit.org/show_bug.cgi?id=67743

Reviewed by Darin Adler.

Source/WebCore:

Test: platform/mac/accessibility/aria-popup-buttons-on-native-elements.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::stringValue):
(WebCore::AccessibilityRenderObject::title):
(WebCore::AccessibilityRenderObject::determineAccessibilityRole):

LayoutTests:

* platform/mac/accessibility/aria-popup-buttons-on-native-elements-expected.txt: Added.
* platform/mac/accessibility/aria-popup-buttons-on-native-elements.html: Added.



Canonical link: https://commits.webkit.org/87567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98962 268f45cc-cd09-0410-ab3c-d52691b4dbfc